<resources>
    <string name="app_name">ZeeWaVaa</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Sign Out</string>
    <string name="title_activity_log_in">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="hintConfirm">Re-type password</string>
    <string name="hintemailmess">Compose your message</string>
    <string name="hintto">TO</string>
    <string name="hintcc">CC</string>
    <string name="hintnameofevent">Event Name</string>
    <string name="hinteventinfo">Event Information</string>
    <string name="hintAddress">Event Address</string>
    <string name="hintLatitude">GPS Latitude</string>
    <string name="hintLogitude">GPS Logitude</string>
    <string name="hinteventdate">Event Date(dd/mm/yyyy)</string>
    <string name="title_activity_event_map">Map</string>
    <string name="hintname">Enter your name</string>
</resources>
