<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/peace"
    tools:context="com.codetribe.project.AdminActivitiy">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="ADMIN PAGE"
                android:textColor="#00CCFF"
                android:textSize="25dp"/>

            <ImageView
                android:id="@+id/imguploadevent"
                android:layout_width="match_parent"
                android:layout_height="117dp"
                android:layout_weight="0.57"
                app:srcCompat="@mipmap/ic_launcher" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtEventName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hintnameofevent"
                    android:inputType="text" />


            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtEventinfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hinteventinfo"
                    android:inputType="text" />


            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:ems="10"
                    android:hint="@string/hintAddress"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtdate"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:ems="10"
                   android:textColor="#000000"
                    android:hint="@string/hinteventdate"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>



            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="COORDINATES" />



                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <EditText
                        android:id="@+id/edtlatitude"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:hint="@string/hintLatitude"
                        android:inputType="numberDecimal" />

                </android.support.design.widget.TextInputLayout>

               <android.support.design.widget.TextInputLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">

                   <EditText
                       android:id="@+id/edtlogitude"
                       android:layout_width="201dp"
                       android:layout_height="wrap_content"
                       android:ems="10"
                       android:hint="@string/hintLogitude"
                       android:inputType="numberDecimal" />


               </android.support.design.widget.TextInputLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnaddevent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Add Event" />

                <Button
                    android:id="@+id/btnEventList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="View Event List" />
            </LinearLayout>
        </LinearLayout>

</ScrollView>
