<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/peace"
    android:orientation="vertical"

    tools:context="com.codetribe.project.EmailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                app:srcCompat="@drawable/logo" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <EditText
                    android:id="@+id/edtemailTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:ems="10"
                    android:hint="@string/hintto"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <EditText
                    android:id="@+id/edtemailcc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:ems="10"
                    android:hint="@string/hintcc"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <EditText
                    android:id="@+id/edtemailmessage"
                    android:layout_width="match_parent"
                    android:layout_height="256dp"
                    android:ems="10"
                    android:gravity="top"
                    android:hint="@string/hintemailmess"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textCapSentences|textAutoCorrect|textLongMessage"
                    android:textColor="#000000"
                    android:theme="@android:style/Theme.NoTitleBar" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnsentEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sent" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
